hphp/test/zend/bad/Zend/tests/generators/send_returns_current.php
<?php

function reverseEchoGenerator() {
    $data = yield;
    while (true) {
        $data = (yield strrev($data));
    }
}

$gen = reverseEchoGenerator();
var_dump($gen->send('foo'));
var_dump($gen->send('bar'));

?>